--- a/index.html
+++ b/index.html
@@ -1,219 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Projets</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Prejets</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" async></script>
-</head>
-
-<body>
+  <body>
     <div class="container">
-        <div class="title">Projets</div>
-        <div id="carousel1">
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/1.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 1
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
+      <div class="title">Projets</div>
+      <div id="carousel1">
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/1.jpg" alt="" />
             </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/2.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 2
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
+            <div class="item_title">Mon titre 1</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
             </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/3.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 3
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/4.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 4
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/5.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 5
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <div id="carousel2">
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/1.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 1
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/2.jpg" alt="" />
             </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/2.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 2
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
+            <div class="item_title">Mon titre 2</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
             </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/3.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 3
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/4.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 4
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/5.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 5
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <div id="carousel3">
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/1.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 1
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/3.jpg" alt="" />
             </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/2.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 2
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
+            <div class="item_title">Mon titre 3</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
             </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/3.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 3
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/4.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 4
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="item_body">
-                    <div class="item_image">
-                        <img src="src/5.jpg" alt="">
-                    </div>
-                    <div class="item_title">
-                        Mon titre 5
-                    </div>
-                    <div class="item_descrp">
-                        Içi une petite description pour tester le Carousel
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/4.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 4</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/5.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 5</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="carousel2">
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/1.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 1</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/2.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 2</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/3.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 3</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/4.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 4</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/5.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 5</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="carousel3">
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/1.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 1</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/2.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 2</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/3.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 3</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/4.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 4</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="item_body">
+            <div class="item_image">
+              <img src="src/5.jpg" alt="" />
+            </div>
+            <div class="item_title">Mon titre 5</div>
+            <div class="item_descrp">
+              Içi une petite description pour tester le Carousel
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-</body>
-
+    <script src="app.js"></script>
+  </body>
 </html>
